[gd_scene load_steps=42 format=3 uid="uid://biljrcgvvn0o3"]

[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://systems/misc/clickable/clickable_change_scene.tscn" id="1_ntkdw"]
[ext_resource type="Script" path="res://systems/games/game2/game2.gd" id="1_uuvrj"]
[ext_resource type="Script" path="res://systems/games/game2/Game_Intro.gd" id="2_602pu"]
[ext_resource type="Animation" uid="uid://dc1ftd4cskxpb" path="res://assets/game2/animation/camera_down.res" id="2_jgeb0"]
[ext_resource type="Script" path="res://systems/games/game2/Control.gd" id="2_sy20t"]
[ext_resource type="Script" path="res://systems/games/game2/Typer.gd" id="3_8tdfp"]
[ext_resource type="Texture2D" uid="uid://dhn0jkv4oyusj" path="res://assets/game2/screens/screen_first_monitor-Sheet.png" id="3_l5q8r"]
[ext_resource type="Animation" uid="uid://cgpikc240hlpm" path="res://assets/game2/animation/first_monitor_on.res" id="3_ovex6"]
[ext_resource type="Script" path="res://systems/games/game2/Animator.gd" id="3_vculw"]
[ext_resource type="PackedScene" uid="uid://ka6f2ksq5rlp" path="res://systems/misc/display_money/money.tscn" id="4_f1vbq"]
[ext_resource type="Texture2D" uid="uid://bl2su0q28nkp6" path="res://assets/game2/screens/screen_second-Sheet.png" id="4_h6k6p"]
[ext_resource type="Animation" uid="uid://d0paraap0ihjc" path="res://assets/game2/animation/second_monitor_on.res" id="4_mqxde"]
[ext_resource type="Texture2D" uid="uid://0lnpv3uq35it" path="res://assets/game2/backgrounds/lights_off.png" id="5_2px2u"]
[ext_resource type="Animation" uid="uid://ba5wly8v1krxu" path="res://assets/game2/animation/camera_up.res" id="5_3vcuh"]
[ext_resource type="Animation" uid="uid://dvfgfxat0hsaa" path="res://assets/game2/animation/engine_on.res" id="5_lwde0"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://systems/pet/pet.tscn" id="5_n7b5j"]
[ext_resource type="Texture2D" uid="uid://cystbkusd2fhh" path="res://assets/game2/backgrounds/casing.png" id="5_yx76f"]
[ext_resource type="Texture2D" uid="uid://b7xrmohnfja46" path="res://assets/game2/props/pc_engine.png" id="7_cojil"]
[ext_resource type="Animation" uid="uid://df6rwdyyxhhdy" path="res://assets/game2/animation/engine_off.res" id="13_7t0vf"]
[ext_resource type="Texture2D" uid="uid://bgfg8rg0dsem5" path="res://assets/game2/buttons/key9.png" id="16_la8l5"]
[ext_resource type="Texture2D" uid="uid://i8kfqxfdmlgc" path="res://assets/game2/buttons/keyback.png" id="17_a86de"]
[ext_resource type="Texture2D" uid="uid://bh13tlbfkbxv5" path="res://assets/game2/buttons/key0-Sheet.png" id="18_2w0wl"]
[ext_resource type="Texture2D" uid="uid://dhfatoh5mfrem" path="res://assets/game2/buttons/key8.png" id="19_0rb0d"]
[ext_resource type="Texture2D" uid="uid://bei4kjp2rqueb" path="res://assets/game2/buttons/key7-Sheet.png" id="20_hnvpf"]
[ext_resource type="Texture2D" uid="uid://ca7x3fcis43gs" path="res://assets/game2/buttons/key6.png" id="21_v8yhs"]
[ext_resource type="Texture2D" uid="uid://h7y28ajbl7vr" path="res://assets/game2/buttons/key5.png" id="22_pu5ip"]
[ext_resource type="Texture2D" uid="uid://dgejsm3koleb3" path="res://assets/game2/buttons/key4-Sheet.png" id="23_5hh53"]
[ext_resource type="Texture2D" uid="uid://bst2mv5sskd8j" path="res://assets/game2/buttons/key3.png" id="24_ogmuy"]
[ext_resource type="Texture2D" uid="uid://dtjjj3pn2xdo1" path="res://assets/game2/buttons/key2.png" id="25_bontb"]
[ext_resource type="Texture2D" uid="uid://cdxem614eely3" path="res://assets/game2/buttons/key1-Sheet.png" id="26_fopi2"]
[ext_resource type="Script" path="res://systems/games/game2/Key.gd" id="27_djfio"]

[sub_resource type="Animation" id="Animation_jhloa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground/Monitor1/ScreenFirstMonitor-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Game/Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(270, 480)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Foreground/Monitor2/ScreenSecond-sheet:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Foreground/Casing/Engine:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 110)]
}

[sub_resource type="Animation" id="Animation_8l81x"]
resource_name = "first_monitor_off"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground/Monitor1/ScreenFirstMonitor-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_72nvg"]
resource_name = "second_monitor_off"
length = 0.68
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground/Monitor2/ScreenSecond-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm1fv"]
_data = {
"RESET": SubResource("Animation_jhloa"),
"first_monitor_off": SubResource("Animation_8l81x"),
"first_monitor_on": ExtResource("3_ovex6"),
"second_monitor_off": SubResource("Animation_72nvg"),
"second_monitor_on": ExtResource("4_mqxde")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cli1b"]
_data = {
"camera_down": ExtResource("2_jgeb0"),
"camera_up": ExtResource("5_3vcuh")
}

[sub_resource type="Animation" id="Animation_iq0gc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground/Casing/Engine:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 110)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ehk7o"]
_data = {
"RESET": SubResource("Animation_iq0gc"),
"engine_off": ExtResource("13_7t0vf"),
"engine_on": ExtResource("5_lwde0")
}

[sub_resource type="Animation" id="Animation_hko8q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(408, 641)]
}

[sub_resource type="Animation" id="Animation_4j2kv"]
resource_name = "move"
length = 2.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(408, 641), Vector2(409, 818), Vector2(43, 820), Vector2(44, 1079), Vector2(480, 1083), Vector2(479, 1367), Vector2(133, 1369), Vector2(134, 1662)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8tun"]
_data = {
"RESET": SubResource("Animation_hko8q"),
"move": SubResource("Animation_4j2kv")
}

[node name="Game2" type="Node2D"]
script = ExtResource("1_uuvrj")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qm1fv"),
"camera": SubResource("AnimationLibrary_cli1b")
}
script = ExtResource("3_vculw")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 2400.0

[node name="Back" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_2px2u")

[node name="Foreground" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 2400.0

[node name="Monitor1" type="Control" parent="Foreground"]
modulate = Color(0.709804, 1, 1, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScreenFirstMonitor-sheet" type="Sprite2D" parent="Foreground/Monitor1"]
position = Vector2(270, 370)
scale = Vector2(4, 4)
texture = ExtResource("3_l5q8r")
hframes = 7

[node name="Monitor1_Output" type="Label" parent="Foreground/Monitor1"]
self_modulate = Color(0, 0.109804, 0.0862745, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 236.0
offset_right = 496.0
offset_bottom = 464.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Monitor2" type="Control" parent="Foreground"]
modulate = Color(0.709804, 1, 1, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScreenSecond-sheet" type="Sprite2D" parent="Foreground/Monitor2"]
position = Vector2(276, 1774)
scale = Vector2(4, 4)
texture = ExtResource("4_h6k6p")
hframes = 7

[node name="Monitor2_Output" type="Label" parent="Foreground/Monitor2"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 1688.0
offset_right = 492.0
offset_bottom = 1820.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Casing" type="TextureRect" parent="Foreground"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
custom_minimum_size = Vector2(540, 2400)
layout_mode = 0
offset_right = 540.0
offset_bottom = 2400.0
texture = ExtResource("5_yx76f")

[node name="Engine" type="Sprite2D" parent="Foreground/Casing"]
position = Vector2(150, 110)
scale = Vector2(4, 4)
texture = ExtResource("7_cojil")

[node name="AnimatorEngine" type="AnimationPlayer" parent="Foreground/Casing/Engine"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_ehk7o")
}

[node name="Typer" type="Control" parent="Foreground/Casing"]
anchors_preset = 0
offset_left = 329.0
offset_top = 1964.0
offset_right = 369.0
offset_bottom = 2004.0
script = ExtResource("3_8tdfp")

[node name="Enter" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = 12.0
offset_top = 156.0
offset_right = 108.0
offset_bottom = 232.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/Enter"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("16_la8l5")
hframes = 2

[node name="Back" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -84.0
offset_top = 156.0
offset_right = 12.0
offset_bottom = 232.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/Back"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("17_a86de")
hframes = 2

[node name="0" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -188.0
offset_top = 156.0
offset_right = -84.0
offset_bottom = 232.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/0"]
position = Vector2(50, 38)
scale = Vector2(4, 4)
texture = ExtResource("18_2w0wl")
hframes = 2

[node name="9" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = 12.0
offset_top = 63.0
offset_right = 108.0
offset_bottom = 139.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/9"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("16_la8l5")
hframes = 2

[node name="8" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -84.0
offset_top = 63.0
offset_right = 12.0
offset_bottom = 139.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/8"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("19_0rb0d")
hframes = 2

[node name="7" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -188.0
offset_top = 63.0
offset_right = -84.0
offset_bottom = 139.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/7"]
position = Vector2(50, 38)
scale = Vector2(4, 4)
texture = ExtResource("20_hnvpf")
hframes = 2

[node name="6" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = 12.0
offset_top = -21.0
offset_right = 108.0
offset_bottom = 55.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/6"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("21_v8yhs")
hframes = 2

[node name="5" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -84.0
offset_top = -21.0
offset_right = 12.0
offset_bottom = 55.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/5"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("22_pu5ip")
hframes = 2

[node name="4" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -188.0
offset_top = -21.0
offset_right = -84.0
offset_bottom = 55.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/4"]
position = Vector2(50, 38)
scale = Vector2(4, 4)
texture = ExtResource("23_5hh53")
hframes = 2

[node name="3" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = 12.0
offset_top = -105.0
offset_right = 108.0
offset_bottom = -29.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/3"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("24_ogmuy")
hframes = 2

[node name="2" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -84.0
offset_top = -105.0
offset_right = 12.0
offset_bottom = -29.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/2"]
position = Vector2(42, 38)
scale = Vector2(4, 4)
texture = ExtResource("25_bontb")
hframes = 2

[node name="1" type="TextureButton" parent="Foreground/Casing/Typer"]
layout_mode = 0
offset_left = -188.0
offset_top = -105.0
offset_right = -84.0
offset_bottom = -29.0
script = ExtResource("27_djfio")

[node name="Sprite" type="Sprite2D" parent="Foreground/Casing/Typer/1"]
position = Vector2(50, 38)
scale = Vector2(4, 4)
texture = ExtResource("26_fopi2")
hframes = 2

[node name="Electric" type="CPUParticles2D" parent="."]
position = Vector2(408, 641)
emitting = false
amount = 24
speed_scale = 3.0
randomness = 0.8
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 152.86
initial_velocity_max = 179.64
scale_amount_min = 10.0
scale_amount_max = 10.0
color = Color(1, 1, 0.27451, 1)

[node name="AnimatorElectric" type="AnimationPlayer" parent="Electric"]
libraries = {
"": SubResource("AnimationLibrary_b8tun")
}

[node name="Game" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0
script = ExtResource("2_sy20t")

[node name="Game_Intro" type="Control" parent="Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_602pu")

[node name="Label" type="Label" parent="Game/Game_Intro"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 300.0
offset_right = 43.5
offset_bottom = 323.0
grow_horizontal = 2

[node name="Play" type="Button" parent="Game/Game_Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = 42.0
offset_right = 184.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
text = "
"

[node name="Main_Hub_Button" parent="Game/Game_Intro" instance=ExtResource("1_ntkdw")]
layout_mode = 0
offset_left = 80.0
offset_top = 522.0
offset_right = 199.0
offset_bottom = 564.0

[node name="Hunger_Bar" type="ProgressBar" parent="Game"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.153
anchor_top = 0.026
anchor_right = 0.847
anchor_bottom = 0.053
offset_left = -0.128006
offset_top = 0.401999
offset_right = 0.12796
offset_bottom = -0.219002
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Money" parent="Game" instance=ExtResource("4_f1vbq")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.163
anchor_top = 0.068
anchor_right = 0.306
anchor_bottom = 0.091
offset_left = 0.112
offset_top = 0.435997
offset_right = -0.256012
offset_bottom = -0.0930023
text = "00000"

[node name="Timer" type="Timer" parent="Game"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="Game"]
position = Vector2(270, 480)
position_smoothing_enabled = true

[node name="Pet" parent="." instance=ExtResource("5_n7b5j")]
visible = false

[connection signal="button_down" from="Foreground/Casing/Typer/Enter" to="Foreground/Casing/Typer/Enter" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/Enter" to="Foreground/Casing/Typer/Enter" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/Back" to="Foreground/Casing/Typer/Back" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/Back" to="Foreground/Casing/Typer/Back" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/0" to="Foreground/Casing/Typer/0" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/0" to="Foreground/Casing/Typer/0" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/9" to="Foreground/Casing/Typer/9" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/9" to="Foreground/Casing/Typer/9" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/8" to="Foreground/Casing/Typer/8" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/8" to="Foreground/Casing/Typer/8" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/7" to="Foreground/Casing/Typer/7" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/7" to="Foreground/Casing/Typer/7" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/6" to="Foreground/Casing/Typer/6" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/6" to="Foreground/Casing/Typer/6" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/5" to="Foreground/Casing/Typer/5" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/5" to="Foreground/Casing/Typer/5" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/4" to="Foreground/Casing/Typer/4" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/4" to="Foreground/Casing/Typer/4" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/3" to="Foreground/Casing/Typer/3" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/3" to="Foreground/Casing/Typer/3" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/2" to="Foreground/Casing/Typer/2" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/2" to="Foreground/Casing/Typer/2" method="_on_button_up"]
[connection signal="button_down" from="Foreground/Casing/Typer/1" to="Foreground/Casing/Typer/1" method="_on_button_down"]
[connection signal="button_up" from="Foreground/Casing/Typer/1" to="Foreground/Casing/Typer/1" method="_on_button_up"]
[connection signal="button_up" from="Game/Game_Intro/Play" to="Game/Game_Intro" method="_on_play_button_up"]
